--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rainlayers",
+  "name": "terrainlayers",
   "displayName": "TerrasinLayers",
   "version": "1.0.0",
   "unity": "2018.3",
